--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,14 +6,38 @@
     android:layout_height="match_parent">
 
 
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_width="300dp"
+        android:layout_height="100dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp"
+
+        app:srcCompat="@drawable/foodieslogo" />
+
+<!--    <TextView-->
+<!--        android:id="@+id/featuredText"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="50dp"-->
+<!--        android:layout_marginStart="48dp"-->
+<!--        android:layout_marginLeft="48dp"-->
+<!--        android:layout_marginBottom="12dp"-->
+<!--        android:layout_below="@+id/logo"-->
+<!--        android:fontFamily="@font/brandontextbold"-->
+<!--        android:text="Featured Restaurants"-->
+<!--        android:textColor="@color/colorPrimaryDark"-->
+<!--        android:textSize="20dp" />-->
+
     <androidx.cardview.widget.CardView
         android:id="@+id/imageCard"
         android:layout_width="match_parent"
 
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="10dp"
         android:layout_marginRight="50dp"
+        android:layout_below="@+id/logo"
         app:cardCornerRadius="6dp"
 
         >
@@ -53,18 +77,7 @@
         android:text="FIND RESTAURANTS"
         android:textSize="18dp" />
 
-    <TextView
-        android:id="@+id/featuredText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:layout_marginStart="48dp"
-        android:layout_marginLeft="48dp"
-        android:layout_marginBottom="12dp"
-        android:fontFamily="@font/brandontextbold"
-        android:text="Featured Restaurants"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="20dp" />
+
 
 
 </RelativeLayout>
